--- a/ansible/roles/install/tasks/remove_workload.yml
+++ b/ansible/roles/install/tasks/remove_workload.yml
@@ -77,12 +77,12 @@
         api_version: operators.coreos.com/v1alpha1
         kind: Subscription
         name: threescale
-        namespace: threescale
+        namespace: 3scale
     - name: Collect CustomResourceDefintions
       k8s_info:
         api_version: apiextensions.k8s.io/v1alpha1
         kind: CustomResourceDefinition
-        namespace: threescale
+        namespace: 3scale
       register: tscale_crds_list        
     - name: Delete CustomResourceDefinitions
       k8s:
@@ -90,8 +90,8 @@
         api_version: apiextensions.k8s.io/v1alpha1
         kind: CustomResourceDefinition
         name: '{{ item.metadata.name }}'
-      loop: '{{ tscale_crds_list.resources }}'        
-
+      loop: '{{ tscale_crds_list.resources }}'   
+    
 - name: Delete workload projects
   k8s:
     state: absent
